# figure_second

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: gh-pages.yml
docs/source/: api.rst
examples/simple/: run.py
figure_second/: __init__.py
julia/: index.html  search_index.js
julia/api/: index.html
julia/example/: index.html
julia/examples/simple/: notebook.jl
julia/figure_second/: Manifest.toml  Project.toml
julia/figure_second/docs/: make.jl
julia/figure_second/docs/src/: example.md  index.md  install.md
julia/figure_second/examples/simple/: run.jl
julia/figure_second/src/: figure_second.jl  python_bindings.jl
julia/install/: index.html
julia/search/: index.html
python/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
python/docs/source/: api.rst
python/figure_second/: figure_second.pyi
src/: inkscape.rs  lib.rs  main.rs  python.rs
src/inkscape/: mod.rs  object.rs  parse.rs
