[package]
name = "figure-second"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
base64 = "0.13.0"

[dependencies.quick-xml]
image = "0.24.3"
version = "0.23.0"

[dependencies.image]
version = "0.24.3"
default_features = false

[dependencies.pyo3]
version = "0.17.0"
optional = true
#default_features = false

[features]
default = []
python = ["pyo3"]
