[package]
name = "figure_second"
version = "0.1.0"
edition = "2021"

[lib]
name = "figure_second"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"


[dependencies.inkscape]
git = "https://github.com/VanillaBrooks/inkscape.git"
rev = "2dbce5e547bad4f84d09487dc1005d4684bdf2f6"

[dependencies.pyo3]
version = "0.17.1"
optional = true
features = ["extension-module"]
#default_features = false

[features]
default = ["python"]
python = ["pyo3"]

[package.metadata.maturin]
python-source = "python"
